--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,3 +8,4 @@ Koolshare Asuswrt-Merlin Let's Encrypt Changelog
    - update	优化脚本判断。
 1.0
    - add	添加自动签到插件。
+   -add https://paoluz.club/user/shop
